src/test/ui/issues/issue-65673.stderr
error[E0277]: the size for values of type `(dyn Trait + 'static)` cannot be known at compilation time
  --> $DIR/issue-65673.rs:9:16
   |
LL | trait WithType {
   |       --------
LL |     type Ctx;
   |     --------- required by this bound in `WithType`
...
LL |     type Ctx = dyn Alias<T>;
   |                ^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `(dyn Trait + 'static)`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: required because of the requirements on the impl of `std::marker::Sized` for `<T as WithType>::Ctx`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
